--- a/app/src/main/res/layout/lesson_view.xml
+++ b/app/src/main/res/layout/lesson_view.xml
@@ -21,55 +21,49 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                android:text="Button" />
+                android:id="@+id/button9"
+                android:layout_width="31dp"
+                android:layout_height="29dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp"
+                android:background="@drawable/profile_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/button8"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/button3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                android:text="Button" />
+                android:id="@+id/button8"
+                android:layout_width="29dp"
+                android:layout_height="27dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginBottom="7dp"
+                android:background="@drawable/lessonplans"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button9"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/button7"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                android:text="Button" />
-        </LinearLayout>
+                android:id="@+id/button7"
+                android:layout_width="37dp"
+                android:layout_height="27dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginBottom="7dp"
+                android:background="@drawable/home"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button8"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
     </android.support.design.widget.BottomNavigationView>
 
     <ScrollView
@@ -119,6 +113,7 @@
                         android:layout_height="40dp"
                         android:gravity="center"
                         android:text="Step 2"
+                        android:textColor="@android:color/white"
                         android:textSize="20sp"
                         app:layout_constraintBottom_toTopOf="@+id/imageView16"
                         app:layout_constraintEnd_toEndOf="@+id/imageView16"
@@ -144,6 +139,7 @@
                         android:layout_marginEnd="21dp"
                         android:layout_marginRight="21dp"
                         android:text="TextView"
+                        android:textColor="@android:color/white"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -174,6 +170,7 @@
                         android:layout_height="40dp"
                         android:gravity="center"
                         android:text="Step 1"
+                        android:textColor="@android:color/white"
                         android:textSize="20sp"
                         app:layout_constraintBottom_toTopOf="@+id/imageView11"
                         app:layout_constraintEnd_toEndOf="@+id/imageView11"
@@ -199,6 +196,7 @@
                         android:layout_marginEnd="21dp"
                         android:layout_marginRight="21dp"
                         android:text="bipity bobity"
+                        android:textColor="@android:color/white"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -229,10 +227,13 @@
                         android:layout_height="47dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_marginTop="9dp"
                         android:layout_marginEnd="6dp"
                         android:layout_marginRight="6dp"
+                        android:layout_marginBottom="9dp"
                         android:gravity="center"
                         android:text="Materials Needed"
+                        android:textColor="@android:color/white"
                         android:textSize="20sp"
                         app:layout_constraintBottom_toTopOf="@+id/textView9"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -248,6 +249,7 @@
                         android:layout_marginEnd="10dp"
                         android:layout_marginRight="10dp"
                         android:text="TextView"
+                        android:textColor="@android:color/white"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -290,15 +292,19 @@
                         android:id="@+id/editText"
                         android:layout_width="217dp"
                         android:layout_height="61dp"
+                        android:layout_marginStart="6dp"
+                        android:layout_marginLeft="6dp"
                         android:layout_marginTop="11dp"
+                        android:layout_marginEnd="12dp"
+                        android:layout_marginRight="12dp"
                         android:layout_marginBottom="11dp"
                         android:ems="10"
                         android:inputType="textPersonName"
                         android:text="Robotic Arm"
+                        android:textColor="@android:color/white"
                         android:textSize="30sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toEndOf="@+id/imageView9"
                         app:layout_constraintTop_toTopOf="parent" />
                 </android.support.constraint.ConstraintLayout>
