--- a/app/src/main/res/layout/signup_view.xml
+++ b/app/src/main/res/layout/signup_view.xml
@@ -19,7 +19,7 @@
         android:background="@drawable/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.111"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
@@ -46,11 +46,18 @@
         android:layout_marginLeft="35dp"
         android:layout_marginEnd="35dp"
         android:layout_marginRight="35dp"
-        android:background="@drawable/username_enter"
+        android:background="@drawable/enter_textbox"
         android:ems="10"
+        android:hint="Username..."
         android:inputType="textPersonName"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/secondary_text_dark_nodisable"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/editText6"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
@@ -62,9 +69,15 @@
         android:layout_marginLeft="35dp"
         android:layout_marginEnd="35dp"
         android:layout_marginRight="35dp"
-        android:background="@drawable/passwordenter"
+        android:background="@drawable/enter_textbox"
         android:ems="10"
+        android:hint="Password..."
         android:inputType="textPassword"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/secondary_text_dark_nodisable"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/editText7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,9 +91,15 @@
         android:layout_marginLeft="35dp"
         android:layout_marginEnd="35dp"
         android:layout_marginRight="35dp"
-        android:background="@drawable/passwordreenter"
+        android:background="@drawable/enter_textbox"
         android:ems="10"
+        android:hint="Re-Enter Password..."
         android:inputType="textPassword"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/secondary_text_dark_nodisable"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
