--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#fc0008</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="whiteTrans">#aaaaaa</color>
 </resources>
