--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,18 +7,22 @@
     tools:context=".HomeFragment">
 
     <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="395dp"
-        android:layout_height="715dp"
+        android:id="@+id/scrollView_lessons"
+        style="@android:style/Widget.Holo.Light.ScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="662dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:clipToPadding="false"
+        android:fillViewport="false"
+        android:scrollbarStyle="insideOverlay"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
@@ -34,7 +38,7 @@
                 android:layout_height="215dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="177dp"
+                android:layout_marginTop="150dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="442dp"
@@ -44,17 +48,20 @@
                 app:contentPadding="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:layout_editor_absoluteX="10dp">
 
                     <ImageView
-                        android:id="@+id/imageView2"
+                        android:id="@+id/image_lsn1"
                         android:layout_width="305dp"
                         android:layout_height="119dp"
                         android:layout_marginStart="22dp"
@@ -69,7 +76,7 @@
                         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/txt_title_lsn1"
                         android:layout_width="136dp"
                         android:layout_height="0dp"
                         android:layout_marginStart="16dp"
@@ -78,7 +85,7 @@
                         android:layout_marginEnd="156dp"
                         android:layout_marginRight="156dp"
                         android:layout_marginBottom="11dp"
-                        android:text="TextView"
+                        android:text="Robot Arm"
                         android:textColor="@android:color/white"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +95,7 @@
                         app:layout_constraintVertical_bias="0.0" />
 
                     <TextView
-                        android:id="@+id/textView4"
+                        android:id="@+id/txt_age_lsn1"
                         android:layout_width="85dp"
                         android:layout_height="53dp"
                         android:layout_marginStart="241dp"
@@ -97,7 +104,7 @@
                         android:layout_marginEnd="22dp"
                         android:layout_marginRight="22dp"
                         android:layout_marginBottom="12dp"
-                        android:text="TextView"
+                        android:text="10+"
                         android:textColor="@android:color/white"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +129,7 @@
                 app:contentPadding="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0">
@@ -156,7 +163,7 @@
                         android:layout_marginEnd="252dp"
                         android:layout_marginRight="252dp"
                         android:layout_marginBottom="11dp"
-                        android:text="TextView"
+                        android:text="Robot Arm"
                         android:textColor="@android:color/white"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -201,17 +208,17 @@
                 app:contentPadding="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.466">
+                app:layout_constraintVertical_bias="0.0">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:id="@+id/imageView10"
+                        android:id="@+id/image_percentage"
                         android:layout_width="106dp"
                         android:layout_height="71dp"
                         android:layout_marginStart="4dp"
@@ -226,7 +233,6 @@
                         tools:srcCompat="@color/colorAccent" />
 
                     <TextView
-                        android:id="@+id/textView12"
                         android:layout_width="185dp"
                         android:layout_height="71dp"
                         android:layout_marginStart="152dp"
