--- a/app/src/main/res/layout/fragment_lessons.xml
+++ b/app/src/main/res/layout/fragment_lessons.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".LessonsFragment">
 
-
     <ScrollView
         android:id="@+id/scrView_lesson"
-        android:layout_width="368dp"
-        android:layout_height="551dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -30,8 +29,8 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView8"
-                android:layout_width="346dp"
-                android:layout_height="241dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_marginStart="12dp"
                 android:layout_marginLeft="12dp"
@@ -50,7 +49,7 @@
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/txt_step2"
                         android:layout_width="320dp"
                         android:layout_height="40dp"
                         android:gravity="center"
@@ -63,7 +62,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:id="@+id/imageView16"
+                        android:id="@+id/image_step2"
                         android:layout_width="315dp"
                         android:layout_height="90dp"
                         app:layout_constraintBottom_toTopOf="@+id/textView13"
@@ -73,14 +72,14 @@
                         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                     <TextView
-                        android:id="@+id/textView13"
+                        android:id="@+id/text_step2desc"
                         android:layout_width="313dp"
                         android:layout_height="75dp"
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginEnd="21dp"
                         android:layout_marginRight="21dp"
-                        android:text="TextView"
+                        android:text="Description of step 2"
                         android:textColor="@android:color/white"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +90,7 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView4"
-                android:layout_width="344dp"
+                android:layout_width="0dp"
                 android:layout_height="238dp"
                 android:layout_margin="10dp"
                 android:padding="10dp"
@@ -107,7 +106,7 @@
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:id="@+id/textView10"
+                        android:id="@+id/text_step1"
                         android:layout_width="314dp"
                         android:layout_height="40dp"
                         android:gravity="center"
@@ -120,7 +119,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:id="@+id/imageView11"
+                        android:id="@+id/image_step1"
                         android:layout_width="310dp"
                         android:layout_height="101dp"
                         app:layout_constraintBottom_toTopOf="@+id/textView2"
@@ -130,14 +129,14 @@
                         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/text_step1desc"
                         android:layout_width="311dp"
                         android:layout_height="50dp"
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginEnd="21dp"
                         android:layout_marginRight="21dp"
-                        android:text="bipity bobity"
+                        android:text="Description of step 1"
                         android:textColor="@android:color/white"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -149,6 +148,7 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView"
                 android:layout_width="342dp"
+                android:layout_width="0dp"
                 android:layout_height="163dp"
                 android:layout_margin="10dp"
                 android:padding="10dp"
@@ -201,7 +201,7 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView3"
-                android:layout_width="341dp"
+                android:layout_width="0dp"
                 android:layout_height="83dp"
                 android:layout_margin="10dp"
                 android:padding="10dp"
