cor riedet update

--- a/app/src/main/res/layout/login_view.xml
+++ b/app/src/main/res/layout/login_view.xml
@@ -33,6 +33,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="92dp"
         android:background="@drawable/signin_button"
+        android:inputType="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
