--- a/app/src/main/res/layout/edit_profile_view.xml
+++ b/app/src/main/res/layout/edit_profile_view.xml
@@ -121,13 +121,13 @@
             android:layout_width="307dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:background="@drawable/enter_textbox_color"
             android:ems="10"
+            android:hint="Username..."
             android:inputType="textPersonName"
-            android:text="Name"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
             app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.523"
