--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -28,13 +28,11 @@
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constraintLayout_Profile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="391dp"
+                android:layout_height="257dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginBottom="520dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -43,15 +41,15 @@
 
                 <ImageView
                     android:id="@+id/imageView3"
-                    android:layout_width="413dp"
-                    android:layout_height="196dp"
+                    android:layout_width="394dp"
+                    android:layout_height="187dp"
                     android:layout_marginStart="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.446"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="1.0"
+                    app:layout_constraintVertical_bias="0.0"
                     tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                 <ImageView
@@ -63,11 +61,29 @@
                     android:layout_marginBottom="17dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.431"
+                    app:layout_constraintHorizontal_bias="0.447"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0"
+                    app:layout_constraintVertical_bias="0.886"
                     tools:srcCompat="@tools:sample/avatars" />
+
+                <Button
+                    android:id="@+id/psettings_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="S"
+                    tools:layout_editor_absoluteX="181dp"
+                    tools:layout_editor_absoluteY="7dp" />
+
+                <Button
+                    android:id="@+id/pedit_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:text="e"
+                    app:layout_constraintStart_toEndOf="@+id/psettings_btn"
+                    tools:layout_editor_absoluteY="7dp" />
+
             </android.support.constraint.ConstraintLayout>
 
             <android.support.v7.widget.CardView
