Added connection to firebase

--- a/app/src/main/res/layout/activity_maintest.xml
+++ b/app/src/main/res/layout/activity_maintest.xml
@@ -21,5 +21,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/buttom_nav"
-        android:id="@+id/frame"/>
+        android:id="@+id/frame">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/main_list"
+            android:layout_width="235dp"
+            android:layout_height="139dp"
+            tools:layout_editor_absoluteX="25dp"
+            tools:layout_editor_absoluteY="26dp" />
+    </FrameLayout>
 </RelativeLayout>
