--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -76,7 +76,7 @@
                         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                     <TextView
-                        android:id="@+id/txt_materia_needed"
+                        android:id="@+id/txt_Lesson1"
                         android:layout_width="136dp"
                         android:layout_height="0dp"
                         android:layout_marginStart="16dp"
@@ -138,57 +138,50 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageView
-                        android:id="@+id/imageView5"
-                        android:layout_width="328dp"
-                        android:layout_height="109dp"
-                        android:layout_marginStart="9dp"
-                        android:layout_marginLeft="9dp"
-                        android:layout_marginEnd="9dp"
-                        android:layout_marginRight="9dp"
-                        android:layout_marginBottom="85dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
                     <TextView
-                        android:id="@+id/textView6"
-                        android:layout_width="85dp"
-                        android:layout_height="48dp"
-                        android:layout_marginStart="9dp"
-                        android:layout_marginLeft="9dp"
-                        android:layout_marginTop="135dp"
-                        android:layout_marginEnd="252dp"
-                        android:layout_marginRight="252dp"
+                        android:id="@+id/txt_materia_needed2"
+                        android:layout_width="136dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="129dp"
+                        android:layout_marginEnd="156dp"
                         android:layout_marginBottom="11dp"
                         android:text="Robot Arm"
+                        android:textColor="@android:color/white"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.15"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0" />
+
+                    <TextView
+                        android:id="@+id/txt_materials2"
+                        android:layout_width="85dp"
+                        android:layout_height="53dp"
+                        android:layout_marginStart="241dp"
+                        android:layout_marginTop="129dp"
+                        android:layout_marginEnd="22dp"
+                        android:layout_marginBottom="12dp"
+                        android:text="10+"
                         android:textColor="@android:color/white"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="92dp"
-                        android:layout_height="47dp"
-                        android:layout_marginStart="244dp"
-                        android:layout_marginLeft="244dp"
-                        android:layout_marginTop="135dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginBottom="29dp"
-                        android:text="TextView"
-                        android:textColor="@android:color/white"
+                    <ImageView
+                        android:id="@+id/image_lsn"
+                        android:layout_width="305dp"
+                        android:layout_height="119dp"
+                        android:layout_marginStart="22dp"
+                        android:layout_marginEnd="21dp"
+                        android:layout_marginBottom="76dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.0" />
-
+                        tools:srcCompat="@tools:sample/backgrounds/scenic" />
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
 
@@ -233,13 +226,12 @@
                         tools:srcCompat="@color/colorAccent" />
 
                     <TextView
+                        android:id="@+id/title"
                         android:layout_width="185dp"
                         android:layout_height="71dp"
                         android:layout_marginStart="152dp"
-                        android:layout_marginLeft="152dp"
                         android:layout_marginTop="4dp"
                         android:layout_marginEnd="5dp"
-                        android:layout_marginRight="5dp"
                         android:layout_marginBottom="4dp"
                         android:text="TextView"
                         android:textColor="@android:color/white"
