--- a/app/src/main/res/layout/home_view.xml
+++ b/app/src/main/res/layout/home_view.xml
@@ -127,7 +127,7 @@
                         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                     <TextView
-                        android:id="@+id/txt_materia_needed"
+                        android:id="@+id/txt_Lesson1"
                         android:layout_width="136dp"
                         android:layout_height="0dp"
                         android:layout_marginStart="16dp"
