--- a/app/src/main/res/layout/edit_profile_view.xml
+++ b/app/src/main/res/layout/edit_profile_view.xml
@@ -9,26 +9,23 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout_Profile"
         android:layout_width="414dp"
-        android:layout_height="301dp"
+        android:layout_height="401dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="520dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.071">
+        app:layout_constraintVertical_bias="0.035">
 
         <ImageView
             android:id="@+id/coverViewImage"
             android:layout_width="413dp"
-            android:layout_height="231dp"
+            android:layout_height="200dp"
             android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
             android:background="@drawable/cover_default"
             app:layout_constraintBottom_toTopOf="@+id/profileViewImage"
             app:layout_constraintEnd_toEndOf="parent"
@@ -40,18 +37,17 @@
 
         <ImageView
             android:id="@+id/profileViewImage"
-            android:layout_width="103dp"
-            android:layout_height="89dp"
+            android:layout_width="121dp"
+            android:layout_height="119dp"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="80dp"
             android:layout_marginBottom="17dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.488"
+            app:layout_constraintHorizontal_bias="0.157"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.913"
+            app:layout_constraintVertical_bias="0.908"
             tools:srcCompat="@tools:sample/avatars" />
 
         <ProgressBar
@@ -59,16 +55,43 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="183dp"
-            tools:layout_editor_absoluteY="206dp" />
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/profileViewImage"
+            app:layout_constraintEnd_toEndOf="@+id/profileViewImage"
+            app:layout_constraintStart_toStartOf="@+id/profileViewImage"
+            app:layout_constraintTop_toTopOf="@+id/profileViewImage" />
 
-        <ProgressBar
-            android:id="@+id/coverProgressBar"
-            style="?android:attr/progressBarStyle"
+        <Button
+            android:id="@+id/editprofilepicbtn"
+            android:layout_width="158dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="73dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/signin_button"
+            android:text="Change Picture"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintStart_toEndOf="@+id/profileViewImage"
+            app:layout_constraintTop_toBottomOf="@+id/coverViewImage"
+            app:layout_constraintVertical_bias="0.1" />
+
+        <TextView
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="183dp"
-            tools:layout_editor_absoluteY="88dp" />
+            android:layout_marginStart="8dp"
+            android:text="Edit Profile"
+            android:textColor="@color/white"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/coverViewImage"
+            app:layout_constraintEnd_toEndOf="@+id/coverViewImage"
+            app:layout_constraintStart_toStartOf="@+id/coverViewImage"
+            app:layout_constraintTop_toTopOf="@+id/coverViewImage" />
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -76,18 +99,16 @@
         android:layout_width="409dp"
         android:layout_height="268dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.642"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_Profile">
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_Profile"
+        app:layout_constraintVertical_bias="0.169">
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/profilecancel"
             android:layout_width="124dp"
             android:layout_height="52dp"
             android:layout_marginStart="41dp"
