--- a/app/src/main/res/layout/signup_view.xml
+++ b/app/src/main/res/layout/signup_view.xml
@@ -29,46 +29,63 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="93dp"
-        android:layout_marginLeft="93dp"
         android:layout_marginEnd="93dp"
-        android:layout_marginRight="93dp"
         android:background="@drawable/signin_button"
+        android:text="SIGN UP"
+        android:textColor="@color/common_google_signin_btn_text_light"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pass2_textbox" />
+        app:layout_constraintTop_toBottomOf="@+id/pass_textbox" />
 
     <EditText
-        android:id="@+id/email_textbox"
+        android:id="@+id/usename_textbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
         android:layout_marginEnd="35dp"
-        android:layout_marginRight="35dp"
         android:background="@drawable/enter_textbox"
         android:ems="10"
-        android:hint="Email..."
+        android:hint="Username..."
         android:inputType="textPersonName"
         android:paddingLeft="25dp"
         android:paddingRight="25dp"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/secondary_text_dark_nodisable"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/pass1_textbox"
+        app:layout_constraintBottom_toTopOf="@+id/email_textbox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
     <EditText
-        android:id="@+id/pass1_textbox"
+        android:id="@+id/email_textbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
         android:layout_marginEnd="35dp"
-        android:layout_marginRight="35dp"
+        android:background="@drawable/enter_textbox"
+        android:ems="10"
+        android:hint="Email..."
+        android:inputType="textWebEmailAddress"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/secondary_text_dark_nodisable"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/pass_textbox"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usename_textbox" />
+
+    <EditText
+        android:id="@+id/pass_textbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="35dp"
         android:background="@drawable/enter_textbox"
         android:ems="10"
         android:hint="Password..."
@@ -78,32 +95,10 @@
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/secondary_text_dark_nodisable"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/pass2_textbox"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_textbox" />
-
-    <EditText
-        android:id="@+id/pass2_textbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginRight="35dp"
-        android:background="@drawable/enter_textbox"
-        android:ems="10"
-        android:hint="Re-Enter Password..."
-        android:inputType="textPassword"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/secondary_text_dark_nodisable"
-        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_su"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pass1_textbox" />
+        app:layout_constraintTop_toBottomOf="@+id/email_textbox" />
 
     <ProgressBar
         android:id="@+id/su_progressBar"
