--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#fc0008</color>
 
     <color name="white">#FFFFFF</color>
-    <color name="whiteTrans">#aaaaaa</color>
+    <color name="whiteTrans">#AAAAAA</color>
 </resources>
